<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_SimpleLinearTwoWayDriveHmi" Id="{8748cea4-762c-46b7-97a0-7afe692003f5}">
    <Declaration><![CDATA[TYPE ST_SimpleLinearTwoWayDriveHmi :
STRUCT
	 ToHomePos: ST_BoolHmi;
	 ToWorkPos: ST_BoolHmi;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>